# article_generation

./: Dockerfile  README.md  count.py  db.env  docker-compose.yml  elect  get_embeddings.py  input_news.txt  key.json  main.py  output_article.txt  parser.py  process_articles.py  processed_urls.txt  pyproject.toml  requirements.txt  test.txt  test.yaml  themes.py
src/article_generation/: __init__.py
volumes/qdrant/: raft_state.json
volumes/qdrant/collections/articles/: config.json
volumes/qdrant/collections/articles/0/: newest_clocks.json  replica_state.json
volumes/qdrant/collections/articles/0/segments/9f0c6a1a-0c98-4ce1-a942-aade03020f87/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005  MANIFEST-000023  segment.json
volumes/qdrant/collections/articles/0/segments/9f0c6a1a-0c98-4ce1-a942-aade03020f87/payload_index/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000013
volumes/qdrant/collections/articles/0/segments/c87e5042-cbd1-414c-9db5-891bbb6fd0d5/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005  MANIFEST-000023  segment.json
volumes/qdrant/collections/articles/0/segments/c87e5042-cbd1-414c-9db5-891bbb6fd0d5/payload_index/: IDENTITY  (+3 more)
volumes/qdrant/collections/articles/0/segments/ee220322-3748-4f14-9436-80d5cc0160a5/: 000009.sst  000011.sst  000013.sst  000015.sst  IDENTITY  LOG  MANIFEST-000005  MANIFEST-000023  segment.json
volumes/qdrant/collections/articles/0/segments/f3efccdf-90ac-4366-949b-292acc2679b0/: 000009.sst  000011.sst  IDENTITY  LOG  MANIFEST-000005  MANIFEST-000019  segment.json
(+9 files in other folders)
